[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/UFO Main/enemies/tank.png" type="Texture" id=1]
[ext_resource path="res://actors/enemies/tank/tank.gd" type="Script" id=2]
[ext_resource path="res://assets/UFO Main/enemies/tank2.png" type="Texture" id=3]
[ext_resource path="res://assets/sound effects/shoot/cannon_shot_mixdown.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/UFO Main/light.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "straight",
"speed": 5.0
} ]

[node name="Tank" type="AnimatedSprite" groups=["tank"]]
frames = SubResource( 1 )
animation = "straight"
script = ExtResource( 2 )

[node name="fireTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioCannonShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 2.2, 2.1 )

[node name="on_screen_delay_true" type="Timer" parent="."]
wait_time = 1.75
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 5 )
texture_scale = 0.3
energy = 0.49

[connection signal="timeout" from="fireTimer" to="." method="_on_fireTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="on_screen_delay_true" to="." method="_on_on_screen_delay_true_timeout"]
